2014-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-EXPORT.x3dv:
	* OutlineEditor-IMPORT.x3dv: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.x3dv:
	* DynamicInline.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.wrl:
	* OutlineEditor.x3d:
	* OutlineEditor.wrl: 

2014-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv: 

2014-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv: 

2014-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d:
	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-EXPORT.x3dv: 

2014-05-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-07  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv: 

2014-05-06  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-EXPORT.x3dv: 

2014-05-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor-IMPORT.x3dv: 

2014-05-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.x3d:
	* OutlineEditor-IMPORT.x3dv:
	* OutlineEditor-EXPORT.x3dv: 

2014-05-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl:
	* OutlineEditor.x3d: 

2014-05-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-05-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl: 

2014-05-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl: 

2014-05-01  Holger Seelig  <holger.seelig@yahoo.de>
